--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    Footer
+		    Press UP arrow to move up <br>
+		    Press DOWN arrow to move down <br>
+		    Press RIGHT arrow to move right <br>
+		    Press LEFT arrow to move left <br>
+		    Press 1 to accelerate <br>
+		    Press 2 to rotate <br>
+		    Press z for hyperspace
 	    </footer>
 	</body>
 </html>
